# libevpp

./: CMakeLists.txt  LICENSE  README.md
examples/echo/: Echo.cpp
include/evpp/: EventLoop.h  IPAddr.h  TCPAcceptSocket.h  Timer.h
include/evpp/linux/: EPollEventLoopImpl.h
include/evpp/windows/: Win32EventLoopImpl.h
src/: EventLoop.cpp  IPAddr.cpp
src/linux/: EventLoop_AllocateSystemEventLoop.cpp
src/windows/: EventLoop_AllocateSystemEventLoop.cpp
